Now From FrontEnd to Backend new Requests can be sent
Fixed errors regarding Post and Get request and Entities not being mapped correctly

--- a/Nexxy-Backend/src/main/resources/application.properties
+++ b/Nexxy-Backend/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:h2:mem:testdb  # Replace 'testdb' with your desired d
 spring.datasource.driverClassName=org.h2.Driver
 spring.h2.console.enabled=true
 spring.security.disabled=true
+logging.level.org.springframework.web=debug
